kubernetes/media/qui/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: qui
spec:
  serviceName: qui
  selector:
    matchLabels:
      app: qui
  template:
    metadata:
      labels:
        app: qui
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: pve2
      containers:
      - name: qui
        image: ghcr.io/autobrr/qui:v1.7.0
        livenessProbe:
          httpGet:
            path: /healthz/liveness
            port: 7476
          initialDelaySeconds: 30
          timeoutSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: proxmox
      resources:
        requests:
          storage: 1Gi
