kubernetes/media/qui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
spec:
  selector:
    app: qui
  ports:
  - port: 80
    targetPort: 7476
